feat: add getAllCategories service and endpoint, update Swagger documentation for security
